--- a/BisLeagues.Presentation/Views/News/Index.cshtml
+++ b/BisLeagues.Presentation/Views/News/Index.cshtml
@@ -20,16 +20,13 @@
         </div>
         <!-- Page Heading & Breadcrumbs  -->
         <!-- Page Heading banner -->
-        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
+        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/banner.jpeg", width = 1280, height = 250 }))" >
         </div>
-        @*<div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">*@
-
         <!-- Page Heading banner -->
-
     }
     <div class="theme-padding white-bg">
         <div class="container">
-            <div class="row">
+            <div class="row maga-drop-wrap">
 
                 <!-- Blog Content -->
                 <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 r-full-width">
@@ -72,7 +69,7 @@
 else
 {
     <div style="margin:auto;width: 50%;margin-top:100px; margin-bottom:100px;">
-        <h1>Ufukta haber yok !</h1>
+        <h1>Ufukta haber yok!</h1>
     </div>
 }
 
