--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -10,26 +10,30 @@
             <div class="row">
 
                 <!-- Footer Column -->
-                <div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
                     <div class="column-widget h-white">
-                        <div class="logo-column p-white">
-                            <img class="footer-logo" src="~/Assets/images/footer-logo.png" alt="">
-                            <ul class="address-list style-2">
-                                <li><span>Adres:</span>@ViewBag.CompanyAddress</li>
-                                <li><span>Telefon:</span>@ViewBag.CompanyPhone</li>
-                                <li><span>Email Adresi:</span>@ViewBag.CompanyEmail</li>
-                            </ul>
-                            <span class="follow-us">Bizi takip et ! </span>
-                            <ul class="social-icons">
-                                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
-                                <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
-                                <li><a class="tumblr" href="#"><i class="fa fa-tumblr"></i></a></li>
-                            </ul>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <img class="footer-logo" src="~/images/logo.png" alt="">
+                            </div>
+                            <div class="col-md-4">
+                                <ul class="address-list style-2">
+                                    <li><span>Adres:</span>@ViewBag.CompanyAddress</li>
+                                    <li><span>Telefon:</span>+90 (111) 000 11 00</li>
+                                    <li><span>Email Adresi:</span>info@ols.com</li>
+                                </ul>
+                            </div>
+                            <div class="col-md-4">
+                                <span class="follow-us">Bizi takip et ! </span>
+                                <ul class="social-icons">
+                                    <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
+                                    <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
+                                    <li><a class="tumblr" href="#"><i class="fa fa-tumblr"></i></a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
                 <!-- Footer Column -->
                 <!-- Footer Column -->
                 @*<div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
@@ -73,7 +77,7 @@
     <!-- Copy Rights -->
     <div class="copy-rights">
         <div class="container">
-            <p>© Copyright by <i class="red-color">@ViewBag.CompanyName</i> All rights reserved.</p>
+            <p>© Copyright by <i class="red-color">OLS</i> All rights reserved.</p>
             <a class="back-to-top scrollup" href="#"><i class="fa fa-angle-up"></i></a>
         </div>
     </div>
