--- a/BisLeagues.Presentation/Views/Authentication/Login.cshtml
+++ b/BisLeagues.Presentation/Views/Authentication/Login.cshtml
@@ -16,9 +16,6 @@
         </div>
     </div>
     <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">    </div>
-    <!-- Page Heading banner -->
 }
 
 <!-- Contact -->
@@ -52,10 +49,10 @@
                 <div class="hidden-sm col-md-2"></div>
             </div>
         }
-        <div class="row">
+        <div class="row justify-content-center">
             <!-- Form -->
             <div class="hidden-sm col-md-4"></div>
-            <div class="col-md-4 wrapper">
+            <div class="col-md-6 wrapper">
                 <form action="@Url.Action("Login", "Authentication")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
                     <div class="form-group wrapper">
                         <i class=" fa fa-envelope"></i>
@@ -66,11 +63,11 @@
                         <input type="password" class="form-control" name="password" placeholder="*******" required>
                     </div>
                     <div class="form-group">
-                        <button class="btn full-width red-btn">Girelim bakalım</button>
+                        <button class="btn full-width primary-btn">Girelim bakalım</button>
                     </div>
                 </form>
             </div>
-            <div class="hidden-sm col-md-4"></div>
+            <div class="hidden-sm col-md-2"></div>
             <!-- Form -->
         </div>
     </div>
