--- a/BisLeagues.Presentation/Views/Authentication/SignUp.cshtml
+++ b/BisLeagues.Presentation/Views/Authentication/SignUp.cshtml
@@ -16,9 +16,6 @@
         </div>
     </div>
     <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">    </div>
-    <!-- Page Heading banner -->
 }
 
 <!-- Contact -->
@@ -55,7 +52,7 @@
         <div class="row">
             <!-- Form -->
             <div class="hidden-sm col-md-4"></div>
-            <div class="col-md-4 wrapper">
+            <div class="col-md-6 wrapper">
                 <form action="@Url.Action("SignUp", "Authentication")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="firstName" placeholder="İsim" required>
@@ -78,7 +75,7 @@
                                     <i class=" fa fa-lock"></i>
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn full-width red-btn">Gönder</button>
+                                    <button class="btn full-width primary-btn">Gönder</button>
                                 </div>
                             </form>
             </div>
