--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -28,11 +28,11 @@
 
   <!-- Left and right controls -->
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
+    <i class="fa fa-chevron-left" style="position: absolute; top: 45%;"></i>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">    
+    <i class="fa fa-chevron-right" style="position: absolute; top: 45%;"></i>
     <span class="sr-only">Next</span>
   </a>
 </div>
