--- a/BisLeagues.Presentation/Views/Team/Application.cshtml
+++ b/BisLeagues.Presentation/Views/Team/Application.cshtml
@@ -34,7 +34,6 @@
     </style>
 }
 @section Heading{
-
     <!-- Page Heading & Breadcrumbs  -->
     <div class="page-heading-breadcrumbs hidden-xs">
         <div class="container">
@@ -46,9 +45,8 @@
         </div>
     </div>
     <!-- Page Heading & Breadcrumbs  -->
-    <!-- Page Heading banner -->
-    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">    </div>
-    <!-- Page Heading banner -->
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/banner.jpeg", width = 1280, height = 250 }))" >
+    </div>
 }
 
 <!-- Contact -->
@@ -117,7 +115,7 @@
                     </div>
                     <img id="img-upload" />
                 </div>
-                <button class="btn red-btn pull-right form-control" style="color:white;">KAYIT OL</button>
+                <button class="btn pull-right form-control register-btn">KAYIT OL</button>
             </form>
             <div class="hidden-sm col-md-2"></div>
             <!-- Form -->
