--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -10,7 +10,7 @@
         <!-- Logo -->
         <div class="logo">
             <a href="@Url.Action("Index", "Home")">
-                <img src="~/images/logo.png" alt="">
+                <img src="~/Assets/images/logo.png" alt="">
             </a>
         </div>
         <!-- Logo -->
